fix(styleglobal): shifting UI when modal is open - bandage tho

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,6 @@
 html {
-  /* scrollbar-gutter: stable; */
   overflow-y: scroll;
+  scrollbar-gutter: stable;
 }
 
 button {
